# LifeCalc

./: .gitignore  Cargo.toml  README.md  VERSION
app/: Cargo.toml
app/src/: main.rs
format/: README.md  user.toml
lifecalc_app/: Cargo.toml
lifecalc_app/src/: app.rs  main.rs  theme.rs
lifecalc_gui/: Cargo.toml
lifecalc_tui/: Cargo.toml
lifecalc_utils/: Cargo.toml
lifecalc_utils/src/: lib.rs
scripts/: dev-start.sh
